--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@comodinx/async-helpers",
   "version": "0.0.1",
-  "description": "@comodinx/promise-helpers is a module for optimize promise usage.",
+  "description": "@comodinx/async-helpers is a module for optimize async usage.",
   "main": "index.js",
   "types": "index.d.ts",
   "scripts": {
