--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,9 +14,10 @@
     "incremental": true,
     "skipLibCheck": true
   },
-  "include": ["*.ts"],
+  "include": ["**/*"],
   "exclude": [
     "node_modules",
+    "**/*.d.ts",
     "**/*.spec.ts",
     "**/*.test.ts"
   ]
